--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
         Spirit, also known as MER-A (Mars Exploration Rover A) or MER-2, is a robotic rover on Mars, active from 2004 to 2010. Spirit became stuck in soft soil.
     </string>
 
+    <!-- App Description-->
+    <string name="app_desc">Spirit, also known as MER-A (Mars Exploration Rover A) or MER-2, is a robotic rover on Mars, active from 2004 to 2010. Spirit became stuck in soft soil.</string>
+
 </resources>
